--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,9 @@
 {
+  "rootDir": "src",
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "*": ["*"]
+    }
   }
 }
