--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://Yongveloper.github.io/yongflix",
+  "homepage": "https://xenodochial-euclid-847dc4.netlify.app/",
   "browserslist": {
     "production": [
       ">0.2%",
