--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-slick": "^0.28.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
+    "swiper": "5.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
