--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://xenodochial-euclid-847dc4.netlify.app/",
+  "homepage": "https://yongflix.netlify.app/",
   "browserslist": {
     "production": [
       ">0.2%",
