--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
