--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
     "swiper": "5.4",
+    "use-react-router": "^1.0.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
