--- a/.gitignore
+++ b/.gitignore
@@ -13,15 +13,11 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
+.env
 .env.test.local
-.env.production.local
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-#API KEY
-.env
-.env.production
